--- a/tex/cap_III.tex
+++ b/tex/cap_III.tex
@@ -4,7 +4,7 @@
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \section{Abordagem Inicial}
 \label{sec:abord-ini} 
-Neste capítulo será abordado todos os passos realizados para se alcançar o objetivo esperado deste trabalho. Para desenvolvimento foi utilizado a linguagem de programação Python por  ter sintaxe simples e suporte a biblioteca OPenCV (\textit{Open Source Computer Vision}) a qual possui diversas técnicas eficientes  e robustas voltadas para processamento de imagens, visão computacional e com  foco em aplicações em tempo real.
+Neste capítulo será abordado todos os passos realizados para se alcançar o objetivo esperado deste trabalho. Para desenvolvimento foi utilizado a linguagem de programação Python por  ter sintaxe simples e suporte a biblioteca OpenCV (\textit{Open Source Computer Vision}) a qual possui diversas técnicas eficientes  e robustas voltadas para processamento de imagens, visão computacional e com  foco em aplicações em tempo real.
 
 Neste trabalho foi utilizado para captura das imagens um iphone 5 resolução da câmera ( 3264 x 2448 pixel) e posteriormente um 6s (4608 x 2592 pixel). A ideia é que, futuramente esse protótipo possa funcionar em qualquer smartphone sem a necessidade de compra de um hardware especial como acontece em \cite{skip2018} que utiliza scanners específicos para ler os palos.
 
