--- a/pre/pre_abstract.tex
+++ b/pre/pre_abstract.tex
@@ -1,4 +1,4 @@
-\keys{ psychological test, Opencv,image processing,cell phone.}
+\keys{ psychological test, OpenCV, image processing, cell phone.}
 
 \begin{abstract}{\textless Aplicação de visão computacional para contagem
 dos palos no teste palográfico\textgreater}
