--- a/pre/pre_resumo.tex
+++ b/pre/pre_resumo.tex
@@ -1,6 +1,6 @@
-\chaves{ teste psicológico, Opencv, processamento de imagens, celular. }
+\chaves{ teste psicológico, OpenCV, processamento de imagens, celular. }
 
 \begin{resumo} 
-A análise do teste palográfico é feita tipicamente de forma manual pelo profissional de psicologia, exigindo a contagem de cada palo ou traço vertical, que uma pessoa consegue expressar em uma folha de papel. O teste pode ser aplicado individualmente ou em grupo, sendo o processo de contagem exaustivo, demorado e passível de erro humano. Com o objetivo de automatizar esse processo, uma solução foi proposta utilizando-se da técnica de visão computacional, baseada na biblioteca Opencv com linguagem, Python, possibilitando realizar o pré-processamento, segmentação, representação e reconhecimento, aplicadas nas imagens capturadas por smartphone em um ambiente com iluminação homogênea. Os resultados permitiram identificar cada traço e contá-los de maneira ordenada por intervalos de tempo, sugerindo um cenário promissor para a análise quantitativa do teste palográfico de maneira automática.
+A análise do teste palográfico é feita tipicamente de forma manual pelo profissional de psicologia, exigindo a contagem de cada palo ou traço vertical, que uma pessoa consegue expressar em uma folha de papel. O teste pode ser aplicado individualmente ou em grupo, sendo o processo de contagem exaustivo, demorado e passível de erro humano. Com o objetivo de automatizar esse processo, uma solução foi proposta utilizando-se da técnica de visão computacional, baseada na biblioteca OpenCV com linguagem, Python, possibilitando realizar o pré-processamento, segmentação, representação e reconhecimento, aplicadas nas imagens capturadas por smartphone em um ambiente com iluminação homogênea. Os resultados permitiram identificar cada traço e contá-los de maneira ordenada por intervalos de tempo, sugerindo um cenário promissor para a análise quantitativa do teste palográfico de maneira automática.
 \end{resumo}
 
