--- a/tese.tex
+++ b/tese.tex
@@ -41,7 +41,7 @@
 %-------------------------------------------------- INSTITUIÇÃO E PROGRAMA %
 \universidade{Universidade Federal de Goiás}
 \uni{UFG}
-\unidade{Insituto de Informática}
+\unidade{Instituto de Informática}
 \departamento{} % Unidades com mais de um departamento.
 
 %\universidadeco{\textless Nome da Universidade do Co-orientador\textgreater}
