--- a/tex/cap_I.tex
+++ b/tex/cap_I.tex
@@ -2,7 +2,7 @@
 \label{cap:intro}
 
 
-O desenvolvimento tecnológico tem avançado muito nos últimos tempos, principalmente na computação móvel por exemplo os nossos celulares  estão com um poder de processamento cada vez maior e o acessa a internet tem se popularizado cada vez mais, possibilitando o surgimentos de serviços inovadores como aberturas de contas bancárias, fazer pagamentos utilizando a câmera como leitor de código de barras, pedir um carro para levá-lo onde quiser, escanear documentos usando a câmera do celular, pedir comida, reservar um lugar para passar uns dias, dentre outros. Nesse sentido, vemos que muitos setores de diversas áreas buscam  adaptar seus produtos e serviços às exigências da atualidade.
+O desenvolvimento tecnológico tem avançado muito nos últimos tempos, principalmente na computação móvel por exemplo os nossos celulares  estão com um poder de processamento cada vez maior e o acesso a internet tem se popularizado cada vez mais, possibilitando o surgimentos de serviços inovadores como aberturas de contas bancárias, fazer pagamentos utilizando a câmera como leitor de código de barras, pedir um carro para levá-lo onde quiser, escanear documentos usando a câmera do celular, pedir comida, reservar um lugar para passar uns dias, dentre outros. Nesse sentido, vemos que muitos setores de diversas áreas buscam  adaptar seus produtos e serviços às exigências da atualidade.
 
 A psicologia não está fora dessa evolução tecnológica, o que permite melhorar suas técnicas de investigação e as práticas que direcionam seus profissionais. O emprego da tecnologia contribui muito para os avanços que a área precisa, ao possibilitar, por exemplo, suporte ao profissional na execução das tarefas mecânicas, como a de contagem, correção e conversão de pontuações nas ocasiões em que os testes são utilizados \cite{psico-artigo}
 
@@ -13,7 +13,7 @@ Apesar dos avanços da informática na área da psicologia, poucos serviços ou 
 \section{Motivação}
 \label{sec:motiv}
 Apesar de alguns avanços conseguidos com o uso da informática na psicologia alguns processos ainda são realizados de maneira manual, como a contagem dos palos no teste palográfico.
-O teste palográfico pode ser aplicado em grupo ou individual, cada indivíduo pode fazer mais de 1000 palos em uma folha de papel durante o teste, o aplicador ao fazer a correção tem que contar manualmente cada palo para fazer sua avaliação quantitativa, isso é bastante exaustivo e demorado para o profissional principalmente se tiver que fazer varias correções em um único dia, por exemplo no Detran quantas pessoas fazem esse teste por dia? analisando os dados no portal do Detran \footnote{http://inside.detran.go.gov.br/habilitacao/index.htm} vemos que houve uma variação na quantidade de condutores de 3599 entre os meses de julho e agosto,  isso significa que nesse período foram realizados por dia uma média de 116 testes palográficos, e isso não é tudo, pois o psicólogo ao fazer a correção do teste  precisa realizar também a análise qualitativa, que envolve outros aspectos dos palos. 
+O teste palográfico pode ser aplicado em grupo ou individual, cada indivíduo pode fazer mais de 1000 palos em uma folha de papel durante o teste, o aplicador ao fazer a correção tem que contar manualmente cada palo para fazer sua avaliação quantitativa, isso é bastante exaustivo e demorado para o profissional principalmente se tiver que fazer varias correções em um único dia, por exemplo no Detran quantas pessoas fazem esse teste por dia? analisando os dados no portal do Detran \footnote{http://inside.detran.go.gov.br/habilitacao/index.htm} vemos que houve uma variação na quantidade de condutores de 3599 entre os meses de julho e agosto de 2019,  isso significa que nesse período foram realizados por dia uma média de 116 testes palográficos, e isso não é tudo, pois o psicólogo ao fazer a correção do teste  precisa realizar também a análise qualitativa, que envolve outros aspectos dos palos. 
 
 Outro problema resultante da contagem manual é que devido esse processo ser exaustivo, pois os aplicadores precisam contar os palos de muitos testes realizados em certo período, isso pode gerar erros na contagem. O desenvolvimento de uma forma eficaz e prática de  contagem dos palos agilizaria muito o trabalho dos aplicadores do teste palográfico, aumentando sua produtividade e qualidade de vida. O que traria um grande benefício para os profissionais dessa área como um todo.
 
