--- a/tex/cap_II.tex
+++ b/tex/cap_II.tex
@@ -42,7 +42,7 @@ Existem dois modelos de folhas para realização do teste, um grande (36,3 x27,4
 \subsection{Avaliação Quantitativa}
 \label{sub:avaquali}
 
-Nessa análise são considerados produtividade, rítmo, e rendimento.
+Nessa análise são considerados produtividade, ritmo, e rendimento.
 
 \subsubsection{Produtividade}
 \label{subsub:avaquali}
@@ -94,7 +94,7 @@ De acordo com a o seu valor de NOR o avaliado pode ser classificado utilizando-s
 
 A análise do rendimento é feita por um gráfico que da uma visão mais clara da relação entre a produtividade e o ritmo. Aqui é analisado a qualidade do rendimento no trabalho e a tendência à exaustão. No gráfico é analisado os tempos x quantidade de palos sendo os tempos no eixo das abcissas e a quantidade de palos no eixo das ordenadas. Para que a oscilação na produtividade seja melhor observada, deve-se sempre fazer o eixo vertical partindo do zero \cite{psicohood2018}.
 
-Abaixo mostro como é feito a analise do gráfico de rendimento com alguns exemplos segundo os autores \cite{psicohood2018} e \cite{manualPsico2010}.
+Abaixo mostro como é feito a análise do gráfico de rendimento com alguns exemplos segundo os autores \cite{psicohood2018} e \cite{manualPsico2010}.
 
 \textbf{Equilibrado} (NOR entre 4 e 6, com produção média): indica capacidade e distribuição do tônus muscular de forma organizada e sistemática. Revela realização de trabalho uniforme.
 
@@ -293,9 +293,9 @@ Visão computacional é a combinação de várias técnicas de processamento de 
 
 Ensinar computadores a ver como os seres humanos é uma missão bem complexa, porque ainda não compreendemos por completo como o processo de visão realmente funciona \cite{dsAcademy2017}.
 
-Conforme [Telles 2013 apud YANG 2007] é muito difícil criar sistemas de visão computacional que se assemelham  às  habilidades cognitivas dos  humanos, dentre as dificuldades estão a variação de iluminação, a dificuldade de generalizar objetos a partir de um conjunto pre-definido de imagens e as variações de posição do objeto em relação à câmera.
+Conforme [Telles 2013 apud YANG 2007] é muito difícil criar sistemas de visão computacional que se assemelham  às  habilidades cognitivas dos  humanos, dentre as dificuldades estão a variação de iluminação, a dificuldade de generalizar objetos a partir de um conjunto predefinido de imagens e as variações de posição do objeto em relação à câmera.
 
-Diversos algorítimos foram desenvolvidos para extrair informações de imagens com a finalidade de automatizar tarefas na qual geralmente seriam feitas utilizando se da visão humana. Na visão humana  sabemos,  que  nossos olhos capturam as imagens e depois nosso cérebro realiza a análise e identificação do seu conteúdo. Na visão computacional realizamos uma série de etapas para reproduzir o processo da visão humana.
+Diversos algorítimos foram desenvolvidos para extrair informações de imagens com a finalidade de automatizar tarefas na qual geralmente seriam feitas utilizando se dá visão humana. Na visão humana  sabemos,  que  nossos olhos capturam as imagens e depois nosso cérebro realiza a análise e identificação do seu conteúdo. Na visão computacional realizamos uma série de etapas para reproduzir o processo da visão humana.
 
 Dependendo do problema, todas as etapas explicadas a seguir são aplicadas, porém, isso não é uma regra, pode haver situações em que apenas algumas etapas já conseguem resolver o problema em questão utilizando-se de metologias diferentes  da apresentada.
 
@@ -313,7 +313,7 @@ Na etapa da aquisição da imagem acontece a captura e digitalização da imagem
 \subsection{Aquisição de imagem}
 \label{sub:aquis}
 
-Existem diversos, dispositivos de captura de imagens, por exemplo, câmera, scanner, leitor biométrico, máquinas de raio-x, etc. A qualidade da imagem vai depender muito do dispositivo, e do ambiente onde esta sendo feito a aquisição, pois pode haver problemas, como falha mecânica do dispositivo, iluminação heterogênea, baixa resolução o que pode causar ruídos na imagem.
+Existem diversos, dispositivos de captura de imagens, por exemplo, câmera, scanner, leitor biométrico, máquinas de raio-x, etc. A qualidade da imagem vai depender muito do dispositivo, e do ambiente onde está sendo feito a aquisição, pois pode haver problemas, como falha mecânica do dispositivo, iluminação heterogênea, baixa resolução o que pode causar ruídos na imagem.
 
 \subsection{Pré-processamento}
 \label{sub:pre-process}
@@ -330,7 +330,7 @@ Nesta etapa do pré-processamento a imagem é subdividida em partes de acordo co
 
 Os algoritmos de segmentação geralmente são baseados na busca pelas descontinuidades ou pelas similaridades dos níveis de cinza. \cite{digitalImgProcess2010} O objetivo da segmentação é agrupar um conjunto de pixels de mesma propriedade, para isso, não pode haver erro, pois isso pode comprometer o sucesso da análise da imagem.
 
-Na descontinuidade, o particionamento da imagem é baseado no subconjunto de pontos de um objeto que o separa do restante da imagem, quer dizer, são representadas por alterações abruptas nos tons de cinza, cores e texturas. Na similaridade, a segmentação é baseada nos aspectos comuns dos pixels da imagem, inicialmente, o método começa com um pixel, e a partir deste pixel, examina-se seus vizinhos, numa determinada sequência, para decidir se eles possuem níveis de cinza similares, segundo o critério de similaridade escolhido, existem diversas técnicas de segmentação por similaridade,  uma delas é a limiarização a qual foi utilizada nesse trabalho.
+Na descontinuidade, o particionamento da imagem é baseado no subconjunto de pontos de um objeto que o separa do restante da imagem, quer dizer, são representadas por alterações abruptas nos tons de cinza, cores e texturas. Na similaridade, a segmentação é baseada nos aspectos comuns dos pixels da imagem, inicialmente, o método começa com um pixel, e a partir deste pixel, examina-se seus vizinhos, numa determinada sequência, para decidir se eles possuem níveis de cinza similares, segundo o critério de similaridade escolhido, existem diversas técnicas de segmentação por similaridade, uma delas é a limiarização a qual foi utilizada nesse trabalho.
 
 
 \subsection{Representação e descrição}
@@ -377,7 +377,7 @@ Para diminuir o peso do processamento da imagem, antes de qualquer operação, a
 \subsubsection{Sistema de cores RGB}
 \label{subsub:siscores-RGB}
 
-O padrão de cores RGB trabalha com as cores   vermelho (\textit{Red}), verde (\textit{Green}) e  azul(\textit{Blue}). Cada uma dessas cores possui uma variação de 256 valores.  Cada cor pode receber um valor de intensidade de 0 até 255, e podem ser combinadas gerando mais de 16,7 milhões de cores distintas.  A Figura  \ref{fig:imgCORES} mostra um exemplo de combinações das cores RGB.  Neste trabalho foi utilizado a biblioteca Opencv que trabalha com a imagem no padrão BGR, a diferença é somente a ordem das cores.
+O padrão de cores RGB trabalha com as cores   Vermelho (\textit{Red}), Verde (\textit{Green}) e  Azul(\textit{Blue}). Cada uma dessas cores possui uma variação de 256 valores.  Cada cor pode receber um valor de intensidade de 0 até 255, e podem ser combinadas gerando mais de 16,7 milhões de cores distintas.  A Figura  \ref{fig:imgCORES} mostra um exemplo de combinações das cores RGB.  Neste trabalho foi utilizado a biblioteca OpenCV que trabalha com a imagem no padrão BGR, a diferença é somente a ordem das cores.
 
 \begin{figure}[H]
  \centering
@@ -391,7 +391,7 @@ O padrão de cores RGB trabalha com as cores   vermelho (\textit{Red}), verde (\
 \label{subsub:siscores-HSV}
 
 
-HSV é abreviatura para os componentes de tom (\textit{hue}), saturação (\textit{saturation}) e valor (\textit{value}). Este sistema é conhecido também como HSB (\textit{hue, saturation, brightness}). 
+HSV é abreviatura para os componentes de Tom (\textit{hue}), Saturação (\textit{saturation}) e Valor (\textit{value}). Este sistema é conhecido também como HSB (\textit{Hue, Saturation, Brightness}). 
 \textit{Hue} :  é o tipo de cor ou tonalidade, pode ser vermelho, amarelo, azul, etc. Pode ter valores entre 0 e 360, mas para algumas aplicações, este valor é normalizado de 0 a 100\%.
 \textit{Saturation} : determina a profundidade ou pureza da cor (de esmaecida a intensa) Pode ter valores entre 0 e 100\% sendo mais saturada aquela mais próxima ao 100\%.
 \textit{Value}: determina a intensidade percebida ( cor mais clara ou mais escura)
@@ -546,7 +546,7 @@ Na figura \ref{subfig:suavizacao}, é apresentado a aplicação de suavização 
 \section{Detecção de bordas}
 \label{sec:bordas}
 
-Bordas(\textit{\textbf{edges}}) podem ser definidas como o limite entre duas regiões cujos níveis de cinza sofrem uma mudança bruta de brilho na imagem. As bordas são os contornos dos objetos, e são muito importantes para identificar e segmentar objetos em imagens.\cite{digitalImgProcess2010}
+Bordas (\textit{\textbf{edges}}) podem ser definidas como o limite entre duas regiões cujos níveis de cinza sofrem uma mudança bruta de brilho na imagem. As bordas são os contornos dos objetos, e são muito importantes para identificar e segmentar objetos em imagens.\cite{digitalImgProcess2010}
 
 As bordas são utilizadas com mais frequência do que detecção de pontos e linhas, apesar de que pontos e linhas isolados também são utilizados em segmentação, porém,  não são muito frequentes em aplicações práticas. \cite{digitalImgProcess2010}
 
